# kdb-templates

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.json  vcpkg.json
benchmarks/: bench_atom_conversion.cpp
include/markrooney/: kdb.hpp
include/markrooney/detail/: exceptions.hpp  macro_expansion.hpp  remove_macros.hpp  types.hpp
release/: kdb.hpp
tests/: test_atom_conversion.cpp  test_custom_types.cpp  test_list_conversion.cpp  test_nested_conversion.cpp  test_stl_conversion.cpp
